# FaceComparator-InsightFace-CXX

./: CMakeLists copy.txt  CMakeLists.txt  mainwindow - Kopya.ui  mainwindow copy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  setup.iss
